--- a/app/src/main/res/layout/widget_tomorrow.xml
+++ b/app/src/main/res/layout/widget_tomorrow.xml
@@ -1,135 +1,149 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.percent.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
+    android:layout_height="match_parent"
+    android:padding="20dp" >
 
     <RelativeLayout
-        android:id="@+id/contents"
-        app:layout_widthPercent="70%"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:padding="10dp">
+        android:background="@drawable/dr_back"
+        android:padding="20dp">
+
+        <RelativeLayout
+            android:id="@+id/line_group"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="15dp">
+
+            <ImageView
+                android:id="@+id/line"
+                android:layout_width="40dp"
+                android:layout_height="4dp"
+                android:src="@drawable/line"
+                android:layout_centerVertical="true"/>
+
+            <kdmhs.me.hyemdooly.dimibob.fonts.KopubBoldTextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="내일"
+                android:textColor="@color/colorPrimary"
+                android:layout_toRightOf="@id/line"
+                android:layout_marginLeft="8dp"
+                android:textSize="15dp" />
+        </RelativeLayout>
+
 
         <RelativeLayout
             android:id="@+id/break_group"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/line_group">
 
-            <TextView
+            <kdmhs.me.hyemdooly.dimibob.fonts.KopubMediumTextView
                 android:id="@+id/break_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="아침"
-                android:textSize="15dp"
-                android:textColor="@color/colorPrimary"
-                android:layout_centerHorizontal="true" />
+                android:textSize="20dp"
+                android:textColor="@color/colorPrimary" />
 
-            <ImageView
-                android:layout_width="15dp"
-                android:layout_height="1dp"
-                android:layout_below="@id/break_title"
-                android:layout_centerHorizontal="true"
-                android:src="@drawable/line"/>
+            <kdmhs.me.hyemdooly.dimibob.fonts.KopubLightTextView
+                android:id="@+id/breakfast"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="14dp"
+                android:text="오징어탕수육 보쌈 오징어탕수육 보쌈 갈비탕 갈비탕 야쿠르트 파인애플 주스 애플 주스 망고 주스 유자차 유후!!"
+                android:layout_toRightOf="@id/break_title"
+                android:layout_marginLeft="20dp"/>
 
         </RelativeLayout>
 
-
-        <TextView
-            android:id="@+id/breakfast"
+        <RelativeLayout
+            android:id="@+id/lunch_group"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="14dp"
-            android:text="breakfast!!!!!!"
-            android:layout_below="@id/break_group"/>
+            android:layout_below="@id/break_group"
+            android:layout_marginTop="15dp">
 
-        <RelativeLayout
-            android:layout_marginTop="7dp"
-            android:id="@+id/lunch_group"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/breakfast">
-
-            <TextView
+            <kdmhs.me.hyemdooly.dimibob.fonts.KopubMediumTextView
                 android:id="@+id/lunch_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="점심"
-                android:textSize="15dp"
-                android:textColor="@color/colorPrimary"
-                android:layout_centerHorizontal="true" />
+                android:textSize="20dp"
+                android:textColor="@color/colorPrimary" />
 
-            <ImageView
-                android:layout_width="15dp"
-                android:layout_height="1dp"
-                android:layout_below="@id/lunch_title"
-                android:layout_centerHorizontal="true"
-                android:src="@drawable/line"/>
+            <kdmhs.me.hyemdooly.dimibob.fonts.KopubLightTextView
+                android:id="@+id/lunch"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="14dp"
+                android:text="오징어탕수육 보쌈 갈비탕 김치 배추 김치 깍두기 백김치 야쿠르트 파인애플 주스 애플 주스 망고 주스 유자차 유후!!"
+                android:layout_toRightOf="@id/lunch_title"
+                android:layout_marginLeft="20dp"/>
 
         </RelativeLayout>
 
-
-
-        <TextView
-            android:id="@+id/lunch"
+        <RelativeLayout
+            android:id="@+id/dinner_group"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/lunch_group"
-            android:textSize="14dp"
-            android:text="lunch!!!!!!" />
+            android:layout_marginTop="15dp">
 
-
-        <RelativeLayout
-            android:layout_marginTop="7dp"
-            android:id="@+id/dinner_group"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/lunch">
-
-            <TextView
+            <kdmhs.me.hyemdooly.dimibob.fonts.KopubMediumTextView
                 android:id="@+id/dinner_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="아침"
-                android:textSize="15dp"
-                android:textColor="@color/colorPrimary"
-                android:layout_centerHorizontal="true" />
+                android:text="저녁"
+                android:textSize="20dp"
+                android:textColor="@color/colorPrimary" />
 
-            <ImageView
-                android:layout_width="15dp"
-                android:layout_height="1dp"
-                android:layout_below="@id/dinner_title"
-                android:layout_centerHorizontal="true"
-                android:src="@drawable/line"/>
+            <kdmhs.me.hyemdooly.dimibob.fonts.KopubLightTextView
+                android:id="@+id/dinner"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="14dp"
+                android:text="오징어탕수육 보쌈 갈비탕 김치 배추 김치 깍두기 백김치 야쿠르트 파인애플 주스 애플 주스 망고 주스 유자차 유후!!"
+                android:layout_toRightOf="@id/dinner_title"
+                android:layout_marginLeft="20dp"/>
 
         </RelativeLayout>
 
-        <TextView
-            android:id="@+id/dinner"
+        <RelativeLayout
+            android:id="@+id/snack_group"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/dinner_group"
-            android:textSize="14dp"
-            android:text="dinner!!!!!!"/>
+            android:layout_marginTop="15dp">
 
+            <kdmhs.me.hyemdooly.dimibob.fonts.KopubMediumTextView
+                android:id="@+id/snack_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="간식"
+                android:textSize="20dp"
+                android:textColor="@color/colorPrimary" />
 
+            <kdmhs.me.hyemdooly.dimibob.fonts.KopubLightTextView
+                android:id="@+id/snack"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="14dp"
+                android:text="초코 브라우니 우유"
+                android:layout_toRightOf="@id/snack_title"
+                android:layout_marginLeft="20dp"/>
+
+        </RelativeLayout>
 
     </RelativeLayout>
 
-    <RelativeLayout
-        app:layout_widthPercent="20%"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/colorPrimary"
-        android:layout_toLeftOf="@id/contents"
-        android:layout_alignBottom="@id/contents"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true">
 
-    </RelativeLayout>
+
+
+
+
 
 </android.support.percent.PercentRelativeLayout>
