--- a/app/src/main/res/layout/widget_today.xml
+++ b/app/src/main/res/layout/widget_today.xml
@@ -3,7 +3,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="20dp" >
+    android:layout_margin="8dp" >
 
     <RelativeLayout
         android:layout_width="wrap_content"
