--- a/app/src/main/res/xml/widget_provider.xml
+++ b/app/src/main/res/xml/widget_provider.xml
@@ -4,4 +4,6 @@
     android:minHeight="146dp"
     android:minWidth="146dp"
     android:resizeMode="horizontal|vertical"
-    android:updatePeriodMillis="10800000" />
+    android:updatePeriodMillis="10800000"
+    android:configure=".WidgetProvider"
+    />
