--- a/app/src/main/res/layout/widget_today.xml
+++ b/app/src/main/res/layout/widget_today.xml
@@ -3,11 +3,12 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="8dp" >
+    android:layout_margin="8dp"
+    android:layout_centerVertical="true">
 
     <RelativeLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:background="@drawable/dr_back"
         android:padding="20dp">
 
@@ -15,7 +16,7 @@
             android:id="@+id/line_group"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="15dp">
+            android:layout_marginBottom="8dp">
 
             <ImageView
                 android:id="@+id/line"
@@ -23,7 +24,7 @@
                 android:layout_height="4dp"
                 android:src="@drawable/line"
                 android:layout_centerVertical="true"/>
-            <kdmhs.me.hyemdooly.dimibob.fonts.KopubBoldTextView
+            <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="오늘"
@@ -40,22 +41,20 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/line_group">
 
-            <kdmhs.me.hyemdooly.dimibob.fonts.KopubMediumTextView
+            <TextView
                 android:id="@+id/break_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="아침"
-                android:textSize="20dp"
-                android:textColor="@color/colorPrimary" />
+                style="@style/TitleTextStyle"/>
 
-            <kdmhs.me.hyemdooly.dimibob.fonts.KopubLightTextView
+            <TextView
                 android:id="@+id/breakfast"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="14dp"
                 android:text="오징어탕수육 보쌈 오징어탕수육 보쌈 갈비탕 갈비탕 야쿠르트 파인애플 주스 애플 주스 망고 주스 유자차 유후!!"
                 android:layout_toRightOf="@id/break_title"
-                android:layout_marginLeft="20dp"/>
+                style="@style/ContentTextStyle"/>
 
         </RelativeLayout>
 
@@ -64,24 +63,22 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/break_group"
-            android:layout_marginTop="15dp">
+            android:layout_marginTop="@dimen/widget_meal_component_margin">
 
-            <kdmhs.me.hyemdooly.dimibob.fonts.KopubMediumTextView
+            <TextView
                 android:id="@+id/lunch_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="점심"
-                android:textSize="20dp"
-                android:textColor="@color/colorPrimary" />
+                style="@style/TitleTextStyle" />
 
-            <kdmhs.me.hyemdooly.dimibob.fonts.KopubLightTextView
+            <TextView
                 android:id="@+id/lunch"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="14dp"
                 android:text="오징어탕수육 보쌈 갈비탕 김치 배추 김치 깍두기 백김치 야쿠르트 파인애플 주스 애플 주스 망고 주스 유자차 유후!!"
                 android:layout_toRightOf="@id/lunch_title"
-                android:layout_marginLeft="20dp"/>
+                style="@style/ContentTextStyle"/>
 
         </RelativeLayout>
 
@@ -90,24 +87,22 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/lunch_group"
-            android:layout_marginTop="15dp">
+            android:layout_marginTop="@dimen/widget_meal_component_margin">
 
-            <kdmhs.me.hyemdooly.dimibob.fonts.KopubMediumTextView
+            <TextView
                 android:id="@+id/dinner_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="저녁"
-                android:textSize="20dp"
-                android:textColor="@color/colorPrimary" />
+                style="@style/TitleTextStyle" />
 
-            <kdmhs.me.hyemdooly.dimibob.fonts.KopubLightTextView
+            <TextView
                 android:id="@+id/dinner"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="14dp"
                 android:text="오징어탕수육 보쌈 갈비탕 김치 배추 김치 깍두기 백김치 야쿠르트 파인애플 주스 애플 주스 망고 주스 유자차 유후!!"
                 android:layout_toRightOf="@id/dinner_title"
-                android:layout_marginLeft="20dp"/>
+                style="@style/ContentTextStyle"/>
 
         </RelativeLayout>
 
@@ -116,24 +111,22 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/dinner_group"
-            android:layout_marginTop="15dp">
+            android:layout_marginTop="@dimen/widget_meal_component_margin">
 
-            <kdmhs.me.hyemdooly.dimibob.fonts.KopubMediumTextView
+            <TextView
                 android:id="@+id/snack_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="간식"
-                android:textSize="20dp"
-                android:textColor="@color/colorPrimary" />
+                style="@style/TitleTextStyle" />
 
-            <kdmhs.me.hyemdooly.dimibob.fonts.KopubLightTextView
+            <TextView
                 android:id="@+id/snack"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="14dp"
                 android:text="초코 브라우니 우유"
                 android:layout_toRightOf="@id/snack_title"
-                android:layout_marginLeft="20dp"/>
+                style="@style/ContentTextStyle"/>
 
         </RelativeLayout>
 
