--- a/app/src/main/res/layout/widget_today.xml
+++ b/app/src/main/res/layout/widget_today.xml
@@ -4,7 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_margin="8dp"
-    android:layout_centerVertical="true">
+    android:layout_centerVertical="true"
+    >
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -52,7 +53,7 @@
                 android:id="@+id/breakfast"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="오징어탕수육 보쌈 오징어탕수육 보쌈 갈비탕 갈비탕 야쿠르트 파인애플 주스 애플 주스 망고 주스 유자차 유후!!"
+                android:text="급식 정보가 없습니다."
                 android:layout_toRightOf="@id/break_title"
                 style="@style/ContentTextStyle"/>
 
@@ -76,7 +77,7 @@
                 android:id="@+id/lunch"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="오징어탕수육 보쌈 갈비탕 김치 배추 김치 깍두기 백김치 야쿠르트 파인애플 주스 애플 주스 망고 주스 유자차 유후!!"
+                android:text="급식 정보가 없습니다."
                 android:layout_toRightOf="@id/lunch_title"
                 style="@style/ContentTextStyle"/>
 
@@ -100,7 +101,7 @@
                 android:id="@+id/dinner"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="오징어탕수육 보쌈 갈비탕 김치 배추 김치 깍두기 백김치 야쿠르트 파인애플 주스 애플 주스 망고 주스 유자차 유후!!"
+                android:text="급식 정보가 없습니다."
                 android:layout_toRightOf="@id/dinner_title"
                 style="@style/ContentTextStyle"/>
 
@@ -124,7 +125,7 @@
                 android:id="@+id/snack"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="초코 브라우니 우유"
+                android:text="급식 정보가 없습니다."
                 android:layout_toRightOf="@id/snack_title"
                 style="@style/ContentTextStyle"/>
 
