--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -11,12 +11,13 @@
     <style name="TitleTextStyle">
         <item name="android:textSize">20dp</item>
         <item name="android:textColor">@color/colorPrimary</item>
+        <item name="android:textStyle">bold</item>
     </style>
 
     <style name="ContentTextStyle">
         <item name="android:textSize">14dp</item>
         <item name="android:layout_marginLeft">20dp</item>
-        <item name="android:textColor">@color/colorWhite</item>
+        <item name="android:textColor">#CC000000</item>
     </style>
 
 
