--- a/app/src/main/res/layout/widget_today.xml
+++ b/app/src/main/res/layout/widget_today.xml
@@ -36,7 +36,7 @@
                 android:layout_toRightOf="@id/line"
                 android:layout_marginLeft="8dp"
                 android:layout_centerVertical="true"
-                android:textSize="15dp" />
+                android:textSize="@dimen/widget_today_title_text_size" />
         </RelativeLayout>
 
 
@@ -59,7 +59,6 @@
                 android:id="@+id/breakfast"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="급식 정보가 없습니다."
                 android:layout_toRightOf="@id/break_title"
                 style="@style/ContentTextStyle"/>
 
@@ -83,7 +82,6 @@
                 android:id="@+id/lunch"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="급식 정보가 없습니다."
                 android:layout_toRightOf="@id/lunch_title"
                 style="@style/ContentTextStyle"/>
 
@@ -107,7 +105,6 @@
                 android:id="@+id/dinner"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="급식 정보가 없습니다."
                 android:layout_toRightOf="@id/dinner_title"
                 style="@style/ContentTextStyle"/>
 
@@ -131,7 +128,6 @@
                 android:id="@+id/snack"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="급식 정보가 없습니다."
                 android:layout_toRightOf="@id/snack_title"
                 style="@style/ContentTextStyle"/>
 
