--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,32 +9,41 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="kdmhs.me.hyemdooly.dimibob.MainActivity">
-
-    <TextView
-        android:id="@+id/textview_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="안녕하세요!"
-        android:textStyle="bold"
-        android:textSize="25dp"
-         />
-
-    <TextView
-        android:id="@+id/textview_contents"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="학교 생활에서 중요한 밥!을 알려주는 디미밥 위젯입니다.\n오류 신고는 hyemdooly@gmail.com으로 메일 부탁드립니다!"
-        android:layout_below="@id/textview_title"
+    
+    
+    <ListView
+        android:id="@+id/listview"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="ⓒ 2017. Hyemdooly all rights reserved."
-        android:layout_marginTop="15dp"
-        android:textSize="10dp"
-        android:layout_below="@id/textview_contents"
-        />
+    
+
+    <!--<TextView-->
+        <!--android:id="@+id/textview_title"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:text="안녕하세요!"-->
+        <!--android:textStyle="bold"-->
+        <!--android:textSize="25dp"-->
+         <!--/>-->
+
+    <!--<TextView-->
+        <!--android:id="@+id/textview_contents"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:text="학교 생활에서 중요한 밥!을 알려주는 디미밥 위젯입니다.\n오류 신고는 hyemdooly@gmail.com으로 메일 부탁드립니다!"-->
+        <!--android:layout_below="@id/textview_title"-->
+        <!--/>-->
+
+    <!--<TextView-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:text="ⓒ 2017. Hyemdooly all rights reserved."-->
+        <!--android:layout_marginTop="15dp"-->
+        <!--android:textSize="10dp"-->
+        <!--android:layout_below="@id/textview_contents"-->
+        <!--/>-->
 
 
 
