--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,38 +16,15 @@
 
     
 
-    <!--<TextView-->
-        <!--android:id="@+id/textview_title"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:text="안녕하세요!"-->
-        <!--android:textStyle="bold"-->
-        <!--android:textSize="25dp"-->
-         <!--/>-->
 
-    <!--<TextView-->
-        <!--android:id="@+id/textview_contents"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:text="학교 생활에서 중요한 밥!을 알려주는 디미밥 위젯입니다.\n오류 신고는 hyemdooly@gmail.com으로 메일 부탁드립니다!"-->
-        <!--android:layout_below="@id/textview_title"-->
-        <!--/>-->
-
-    <!--<TextView-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:text="ⓒ 2017. Hyemdooly all rights reserved."-->
-        <!--android:layout_marginTop="15dp"-->
-        <!--android:textSize="10dp"-->
-        <!--android:layout_below="@id/textview_contents"-->
-        <!--/>-->
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="ⓒ 2017. Hyemdooly all rights reserved."
+        android:text="ⓒ 2017. Hyemdooly all rights reserved.\n아직 상단바알림 기능은 지원하지 않습니다ㅠㅠ"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
+        android:textAlignment="center"
         android:layout_marginBottom="6dp"
         />
 
